# fast-knapsack-cython

./: .gitignore  README.md  cython_dfs_results.txt  cython_hill_climbing_results.txt  generate_and_save_problem.py  generate_report.py  pulp_benchmark_results.txt  pyproject.toml  solve_with_cython.py  solve_with_minizinc_solvers.py  solve_with_numba.py  solve_with_pulp.py  solver_cython_dfs.py  solver_cython_sa.py  solver_numba.py
.github/workflows/: ci.yml
result/: benchmark_report_jp.md  cbc_results.txt  cp_sat_results.txt  cython_dfs_results.txt  cython_hill_climbing_results.txt  cython_results.txt  gecode_results.txt  numba_results.txt  pulp_results.txt
results/: cbc_results.txt  cp_sat_results.txt  cython_results.txt
results/reports/: benchmark_report_jp.md
results/runs/: numba_results.txt
scripts/: analyze_tuning.py  generate_and_save_problem.py  generate_report.py  run_timeout_experiments.py  solve_with_cython.py  solve_with_minizinc_solvers.py  solve_with_numba.py  tune_knapsack.py  tuning_full_results.csv  verify_solution.py
solver_cython/: core.pyx  setup.py
solver_minizinc/: data.dzn  problem.mzn
src/solver_cython/: core.pyi  core.pyx  setup.py
src/solver_minizinc/: problem.mzn
src/utils/: __init__.py  solution_eval.py
tests/: test_solution_eval.py  test_solvers_smoke.py
