[project]
name = "fast-knapsack-benchmark"
version = "0.1.0"
description = "Time-budget benchmark of Cython, Numba, and MiniZinc solvers for a constrained large-scale knapsack problem."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.0",
    "cython>=3.2.4",
    "matplotlib>=3.10.8",
    "minizinc>=0.10.0",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pulp>=3.3.0",
    "setuptools>=82.0.0",
    "tabulate>=0.10.0",
]
